import java.util.List;

public class Banco {

  private String nombre;

    /**
    * 
    *
   */
  public List<Cuenta> cuenta;

  public void listarCobros(Calendar periodo) {
  }

}