public class Monto {

  private Float monto;

  private Float montoEnPesos;

    public Moneda moneda;
    
  private Float convertiraPesos() {
  return null;
  }

}